Bug 679136: Use js::Interpret's interrupts to implement JSOPTION_PCCOUNT's bytecode profiling. r=sfink.